src/FinancialForce ClickLink/objects/IntegrationRuleTargetTest__c.object
<CustomObject>
    <fields>
        <fullName>ABooleanField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A Boolean Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALookupField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A Lookup Field</label>
        <referenceTo>IntegrationRuleLookupTest__c</referenceTo>
        <relationshipLabel>Integration Rule Target Tests</relationshipLabel>
        <relationshipName>IntegrationRuleTargetTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ANumberField__c</fullName>
        <label>A Number Field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATextField__c</fullName>
        <label>A Text Field</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnotherBooleanField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Another Boolean Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AnotherLookupField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClickLink Lookup Test</label>
        <referenceTo>IntegrationRuleLookupTest__c</referenceTo>
        <relationshipLabel>ClickLink Target Tests (ClickLink Lookup Test)</relationshipLabel>
        <relationshipName>ClickLinkTargetTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AnotherNumberField__c</fullName>
        <label>Another Number Field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnotherStatus__c</fullName>
        <label>Another Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Currency</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IntegrationRuleSourceTest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClickLink Source Test</label>
        <referenceTo>IntegrationRuleSourceTest__c</referenceTo>
        <relationshipLabel>ClickLink Target Tests</relationshipLabel>
        <relationshipName>IntegrationRuleTargetTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number16__c</fullName>
        <label>Number16</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent2__c</fullName>
        <label>Percent2</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent4__c</fullName>
        <label>Percent4</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PicklistMulti__c</fullName>
        <label>Picklist Multi</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Multi1</fullName>
                </value>
                <value>
                    <fullName>Multi2</fullName>
                </value>
                <value>
                    <fullName>Multi3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value1</fullName>
                </value>
                <value>
                    <fullName>Value2</fullName>
                </value>
                <value>
                    <fullName>Value3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Syncing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Syncing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text10__c</fullName>
        <label>Text10</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextAreaLong__c</fullName>
        <label>Text Area Long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TextAreaRich__c</fullName>
        <label>Text Area Rich</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TextArea__c</fullName>
        <label>Text Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>ClickLink Target Test</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ABooleanField__c</columns>
        <columns>ANumberField__c</columns>
        <columns>ATextField__c</columns>
        <columns>Syncing__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IRTSTT-{00000000}</displayFormat>
        <label>ClickLink Target Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClickLink Target Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>